--- a/templates/table.html
+++ b/templates/table.html
@@ -7,6 +7,10 @@
 
 
     <style>
+        #back
+        {
+            background-image: linear-gradient(120deg, #84fab0 0%, #8fd3f4 100%);
+        }
         #an
          {
             width:100%;
@@ -47,7 +51,7 @@
         {#    background-color: #7083CE;#}
     </style>
     <meta charset="utf-8">
-    <body>
+    <body >
     <div class = "courseTable">
         <table frame=void id = "hole-form">
             <tr>
