--- a/templates/register.html
+++ b/templates/register.html
@@ -1,34 +1,44 @@
 {% extends "base.html" %}
 {% block title %}註冊{% endblock title%}
 {% block content %}
-<form action="{{ url_for('user_bp.register') }}" method="post">
-    <div class="mb-3">
-        <label for="username" class="form-label">帳號 *</label>
-        <input type="text" class="form-control" id="username" name="username" required>
-        <div id="emailHelp" class="form-text">帳號會作為評價者的識別，並用於登入，長度必須小於 12 位的英數組合。</div>
-    </div>
-    <div class="mb-3">
-        <label for="email" class="form-label">Email *</label>
-        <input type="email" class="form-control" id="email" name="email" required>
-        <div id="emailHelp" class="form-text">用於忘記密碼的認證信。</div>
-    </div>
-    <div class="mb-3">
-        <label for="password" class="form-label">密碼 *</label>
-        <input type="password" class="form-control" id="password" name="password" required>
-        <div id="emailHelp" class="form-text">密碼為長度必須小於 30 位。</div>
-    </div>
-    <div class="mb-3">
-        <label for="repeatPassword" class="form-label">重複密碼 *</label>
-        <input type="password" class="form-control" id="repeatPassword" name="repeatPassword" required>
-    </div>
-    <div class="mb-3">
-        <label for="dept" class="form-label">科系</label>
-        <input type="text" class="form-control" id="dept" name="dept">
-    </div>
-    <div class="mb-3">
-        <label for="grade" class="form-label">年級</label>
-        <input type="number" class="form-control" id="grade" name="grade">
-    </div>
-    <button type="submit" class="btn btn-primary">註冊</button>
-    </form>
+    <style>
+        #back
+        {
+            background-image: linear-gradient(120deg, #84fab0 0%, #8fd3f4 100%);
+            {#opacity: 0.5;#}
+        }
+
+    </style>
+    <body  id = "back" style="position: relative">
+    <form action="{{ url_for('user_bp.register') }}" method="post">
+        <div class="mb-3">
+            <label for="username" class="form-label">帳號 *</label>
+            <input type="text" class="form-control" id="username" name="username" required>
+            <div id="emailHelp" class="form-text">帳號會作為評價者的識別，並用於登入，長度必須小於 12 位的英數組合。</div>
+        </div>
+        <div class="mb-3">
+            <label for="email" class="form-label">Email *</label>
+            <input type="email" class="form-control" id="email" name="email" required>
+            <div id="emailHelp" class="form-text">用於忘記密碼的認證信。</div>
+        </div>
+        <div class="mb-3">
+            <label for="password" class="form-label">密碼 *</label>
+            <input type="password" class="form-control" id="password" name="password" required>
+            <div id="emailHelp" class="form-text">密碼為長度必須小於 30 位。</div>
+        </div>
+        <div class="mb-3">
+            <label for="repeatPassword" class="form-label">重複密碼 *</label>
+            <input type="password" class="form-control" id="repeatPassword" name="repeatPassword" required>
+        </div>
+        <div class="mb-3">
+            <label for="dept" class="form-label">科系</label>
+            <input type="text" class="form-control" id="dept" name="dept">
+        </div>
+        <div class="mb-3">
+            <label for="grade" class="form-label">年級</label>
+            <input type="number" class="form-control" id="grade" name="grade">
+        </div>
+        <button type="submit" class="btn btn-primary">註冊</button>
+        </form>
+    </body>
 {% endblock content %}
